# docker-talkies

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Dockerfile.dev  Dockerfile.overlay  LICENSE  Makefile  README.md  entrypoint.sh  models-cpu.json  models.json  pyproject.toml  requirements-heavy-cpu.txt  requirements-heavy-cuda.txt  streaming.md
.agents/.skills/talkies/: SKILL.md
.agents/.skills/talkies/references/: setup.md
.github/: FUNDING.yml
.github/workflows/: build.yml  pipeline.yml
scripts/: bump_exclude_newer.sh  compile-heavy-deps.sh  heavy-deps-cpu.in  heavy-deps-cuda.in
src/talkies/: __init__.py  audio.py  auth.py  config.py  downloads.py  files.py  logging.py  mcp_server.py  server.py  tts.py  vad.py
src/talkies/models/: __init__.py  _nemo_paths.py  base.py  kokoro.py  kokoro_nvidia.py  multitask.py  parakeet.py  parakeet_cpp.py  qwen3_tts.py  salm.py  whisper.py
tests/: conftest.py  test_config.py  test_kokoro_nvidia.py  test_logging.py
tests/integration/: common.sh  e2e_kokoro_nvidia.sh  e2e_nemotron_asr.sh  e2e_qwen3_modes.sh  harness.sh  run.sh  test_endpoints.sh  test_qwen3.sh  test_speech.sh  test_transcribe.sh
tests/integration/.fixtures/: .gitkeep  audio.mp3.txt
